add video And Edite Responsive

--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
         </div>
       </section>
 
+     <div class="div">
       <img src="./images/dice-6.png" alt="Playing dice" class="dice none" >
-      <button class="btn btn--new"><span class="icon">🔄</span> New game</button>
+      <button class="btn btn--new"><span class="icon">🔄</span> <span class="nameOfbtns"> New game</span></button>
       <div class="btns-container">
-        <button class="btn btn--roll"><p class="content">🎲 Roll Dice </p> </button>
-      <button class="btn btn--hold"><span class="icon">📥</span> Hold</button>
+        <button class="btn btn--roll"><p class="content"><span class="icon" >🎲</span>   <span class="nameOfbtns" style="display: none;"> Roll Dice </span> </p> </button>
+        <button class="btn btn--hold"><p class="content"><span class="icon">📥 </span>   <span class="nameOfbtns"> hold      </span>      </p></button>
+        <!-- <button class="btn btn--roll"><p class="content"><span class="icon">🎲 </span>   <span class="nameOfbtns"> hold      </span>      </p></button> -->
       </div>
+     </div>
     </main>
     <script src="bigGame.js"></script>
-  
+    <!-- 📥 -->
 
 </body></html>
